Update all documentation to reflect actual implementation status, known bugs, and missing CRUD operations